<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/first_title"
            android:text="@string/function_parameter_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_purple" />

        <TextView
            style="@style/second_title"
            android:text="@string/version_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            style="@style/zebra_block"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/third_title"
                android:text="Request Head:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="10dp"
                android:text="apkPackageName:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入app包名"
                android:id="@+id/apkPackageNameEt" />

            <TextView
                android:layout_marginTop="10dp"
                android:text="apkVersionCode:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入app的VersionCode"
                android:id="@+id/apkVersionCodeEt"
                android:inputType="number"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="deviceModel:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入机器机型"
                android:id="@+id/deviceModelEt" />

            <TextView
                android:layout_marginTop="10dp"
                android:text="machineId:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入机器序列号"
                android:id="@+id/machineIdEt" />

            <TextView
                android:layout_marginTop="10dp"
                android:text="deviceOSVersion:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入机器系统版本"
                android:id="@+id/deviceOSVersionEt" />

        </LinearLayout>

        <LinearLayout
            style="@style/zebra_block"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/third_title"
                android:text="Request Params:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="10dp"
                android:text="versionName:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入需要检查更新app的versionName"
                android:id="@+id/paramsVersionNameEt" />

            <TextView
                android:layout_marginTop="10dp"
                android:text="versionCode:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入需要检查更新app的versionCode"
                android:id="@+id/paramsVersionCodeEt" />

            <TextView
                android:layout_marginTop="10dp"
                android:text="packageName:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入需要检查更新app的包名"
                android:id="@+id/paramsPackageNameEt" />

            <TextView
                android:layout_marginTop="10dp"
                android:text="md5:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入需要检查更新app当前版本的md5值"
                android:id="@+id/paramsMd5Et" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:onClick="onAppCheck"
            android:text="@string/version_check" />

        <TextView
            style="@style/second_title"
            android:text="@string/report_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:onClick="onAppReport"
            android:text="@string/report_update" />
    </LinearLayout>
</ScrollView>
